[gd_scene load_steps=61 format=2]

[ext_resource path="res://fonts/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Cynthia_bw.png" type="Texture" id=2]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Isaac_bw.png" type="Texture" id=3]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Kilian_bw.png" type="Texture" id=4]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Luc_bw.png" type="Texture" id=5]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Marie_bw.png" type="Texture" id=6]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Thea_bw.png" type="Texture" id=7]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Emilia_bw.png" type="Texture" id=8]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Francesco_bw.png" type="Texture" id=9]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Lina_bw.png" type="Texture" id=10]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Niko_bw.png" type="Texture" id=11]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Sinisa_bw.png" type="Texture" id=12]
[ext_resource path="res://Level/UserConfirmation.gd" type="Script" id=13]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Sofia_bw.png" type="Texture" id=14]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Diego_bw.png" type="Texture" id=15]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Jupp_bw.png" type="Texture" id=16]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Lydia_bw.png" type="Texture" id=17]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Thilo_bw.png" type="Texture" id=18]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Tommy_bw.png" type="Texture" id=19]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Tilda_bw.png" type="Texture" id=20]
[ext_resource path="res://Level/TeamSelection.gd" type="Script" id=21]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Cynthia.png" type="Texture" id=22]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Isaac.png" type="Texture" id=23]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Kilian.png" type="Texture" id=24]
[ext_resource path="res://Level/Button_Team1.gd" type="Script" id=25]
[ext_resource path="res://Level/Button_Team2.gd" type="Script" id=26]
[ext_resource path="res://Level/Button_Team3.gd" type="Script" id=27]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Luc.png" type="Texture" id=28]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Marie.png" type="Texture" id=29]
[ext_resource path="res://graphics/Characters/FullCards/Team1/Thea.png" type="Texture" id=30]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Lina.png" type="Texture" id=31]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Sinisa.png" type="Texture" id=32]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Sofia.png" type="Texture" id=33]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Niko.png" type="Texture" id=34]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Emilia.png" type="Texture" id=35]
[ext_resource path="res://graphics/Characters/FullCards/Team2/Francesco.png" type="Texture" id=36]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Lydia.png" type="Texture" id=37]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Thilo.png" type="Texture" id=38]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Diego.png" type="Texture" id=39]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Jupp.png" type="Texture" id=40]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Tilda.png" type="Texture" id=41]
[ext_resource path="res://graphics/Characters/FullCards/Team3/Tommy.png" type="Texture" id=42]

[sub_resource type="DynamicFont" id=30]
size = 45
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.878431, 0.898039, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.792157, 0.823529, 0.662745, 1 )

[sub_resource type="DynamicFont" id=29]
size = 45
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.878431, 0.898039, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.878431, 0.898039, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.792157, 0.823529, 0.662745, 1 )

[sub_resource type="DynamicFont" id=31]
size = 45
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.878431, 0.898039, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.878431, 0.898039, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.792157, 0.823529, 0.662745, 1 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.678431, 0.705882, 0.478431, 1 )

[sub_resource type="DynamicFont" id=14]
size = 33
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 21
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0941176, 0.611765, 0.0980392, 1 )

[sub_resource type="DynamicFont" id=16]
size = 21
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.643137, 0.14902, 0.14902, 1 )

[node name="TeamSelection" type="Node2D"]
script = ExtResource( 21 )

[node name="ScrollContainer_Team1" type="ScrollContainer" parent="."]
margin_left = 30.0
margin_top = 100.0
margin_right = 583.0
margin_bottom = 800.0
rect_min_size = Vector2( 540, 700 )
scroll_horizontal_enabled = false

[node name="VBoxContainer_Team1" type="VBoxContainer" parent="ScrollContainer_Team1"]
margin_right = 541.0
margin_bottom = 1940.0
rect_min_size = Vector2( 540, 1000 )

[node name="Container_Cynthia" type="VBoxContainer" parent="ScrollContainer_Team1/VBoxContainer_Team1"]
margin_right = 541.0
margin_bottom = 320.0
rect_min_size = Vector2( 541, 320 )

[node name="CynthiaBw" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Cynthia"]
position = Vector2( 270, 168 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 2 )

[node name="Cynthia" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Cynthia"]
position = Vector2( 270, 168 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 22 )

[node name="Container_Isaac" type="VBoxContainer" parent="ScrollContainer_Team1/VBoxContainer_Team1"]
margin_top = 324.0
margin_right = 541.0
margin_bottom = 644.0
rect_min_size = Vector2( 541, 320 )

[node name="IsaacBw" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Isaac"]
position = Vector2( 272, 174 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 3 )

[node name="Isaac" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Isaac"]
position = Vector2( 272, 174 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 23 )

[node name="Container_Kilian" type="VBoxContainer" parent="ScrollContainer_Team1/VBoxContainer_Team1"]
margin_top = 648.0
margin_right = 541.0
margin_bottom = 968.0
rect_min_size = Vector2( 541, 320 )

[node name="KilianBw" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Kilian"]
position = Vector2( 280, 185 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 4 )

[node name="Kilian" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Kilian"]
position = Vector2( 280, 185 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 24 )

[node name="Container_Luc" type="VBoxContainer" parent="ScrollContainer_Team1/VBoxContainer_Team1"]
margin_top = 972.0
margin_right = 541.0
margin_bottom = 1292.0
rect_min_size = Vector2( 541, 320 )

[node name="LucBw" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Luc"]
position = Vector2( 276, 182 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 5 )

[node name="Luc" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Luc"]
position = Vector2( 276, 182 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 28 )

[node name="Container_Marie" type="VBoxContainer" parent="ScrollContainer_Team1/VBoxContainer_Team1"]
margin_top = 1296.0
margin_right = 541.0
margin_bottom = 1616.0
rect_min_size = Vector2( 541, 320 )

[node name="MarieBw" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Marie"]
position = Vector2( 282, 187 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 6 )

[node name="Marie" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Marie"]
position = Vector2( 282, 187 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 29 )

[node name="Container_Thea" type="VBoxContainer" parent="ScrollContainer_Team1/VBoxContainer_Team1"]
margin_top = 1620.0
margin_right = 541.0
margin_bottom = 1940.0
rect_min_size = Vector2( 541, 320 )

[node name="TheaBw" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Thea"]
position = Vector2( 265, 169 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 7 )

[node name="Thea" type="Sprite" parent="ScrollContainer_Team1/VBoxContainer_Team1/Container_Thea"]
position = Vector2( 265, 169 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 30 )

[node name="ScrollContainer_Team2" type="ScrollContainer" parent="."]
margin_left = 712.0
margin_top = 100.0
margin_right = 1265.0
margin_bottom = 800.0
rect_min_size = Vector2( 540, 700 )
scroll_horizontal_enabled = false

[node name="VBoxContainer_Team2" type="VBoxContainer" parent="ScrollContainer_Team2"]
margin_right = 541.0
margin_bottom = 1940.0
rect_min_size = Vector2( 540, 1000 )

[node name="Container_Emilia" type="VBoxContainer" parent="ScrollContainer_Team2/VBoxContainer_Team2"]
margin_right = 541.0
margin_bottom = 320.0
rect_min_size = Vector2( 541, 320 )

[node name="EmiliaBw" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Emilia"]
position = Vector2( 262, 172 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 8 )

[node name="Emilia" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Emilia"]
position = Vector2( 262, 172 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 35 )

[node name="Container_Francesco" type="VBoxContainer" parent="ScrollContainer_Team2/VBoxContainer_Team2"]
margin_top = 324.0
margin_right = 541.0
margin_bottom = 644.0
rect_min_size = Vector2( 541, 320 )

[node name="FrancescoBw" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Francesco"]
position = Vector2( 261, 184 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 9 )

[node name="Francesco" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Francesco"]
position = Vector2( 261, 184 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 36 )

[node name="Container_Lina" type="VBoxContainer" parent="ScrollContainer_Team2/VBoxContainer_Team2"]
margin_top = 648.0
margin_right = 541.0
margin_bottom = 968.0
rect_min_size = Vector2( 541, 320 )

[node name="LinaBw" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Lina"]
position = Vector2( 272, 179 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 10 )

[node name="Lina" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Lina"]
position = Vector2( 272, 179 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 31 )

[node name="Container_Niko" type="VBoxContainer" parent="ScrollContainer_Team2/VBoxContainer_Team2"]
margin_top = 972.0
margin_right = 541.0
margin_bottom = 1292.0
rect_min_size = Vector2( 541, 320 )

[node name="NikoBw" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Niko"]
position = Vector2( 270, 178 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 11 )

[node name="Niko" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Niko"]
position = Vector2( 270, 178 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 34 )

[node name="Container_Sinisa" type="VBoxContainer" parent="ScrollContainer_Team2/VBoxContainer_Team2"]
margin_top = 1296.0
margin_right = 541.0
margin_bottom = 1616.0
rect_min_size = Vector2( 541, 320 )

[node name="SinisaBw" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Sinisa"]
position = Vector2( 268, 175 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 12 )

[node name="Sinisa" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Sinisa"]
position = Vector2( 268, 175 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 32 )

[node name="Container_Sofia" type="VBoxContainer" parent="ScrollContainer_Team2/VBoxContainer_Team2"]
margin_top = 1620.0
margin_right = 541.0
margin_bottom = 1940.0
rect_min_size = Vector2( 541, 320 )

[node name="SofiaBw" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Sofia"]
position = Vector2( 272, 149 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 14 )

[node name="Sofia" type="Sprite" parent="ScrollContainer_Team2/VBoxContainer_Team2/Container_Sofia"]
position = Vector2( 272, 149 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 33 )

[node name="ScrollContainer_Team3" type="ScrollContainer" parent="."]
margin_left = 1340.0
margin_top = 100.0
margin_right = 1893.0
margin_bottom = 800.0
rect_min_size = Vector2( 540, 700 )
scroll_horizontal_enabled = false

[node name="VBoxContainer_Team3" type="VBoxContainer" parent="ScrollContainer_Team3"]
margin_right = 541.0
margin_bottom = 1940.0
rect_min_size = Vector2( 540, 1000 )

[node name="Container_Diego" type="VBoxContainer" parent="ScrollContainer_Team3/VBoxContainer_Team3"]
margin_right = 541.0
margin_bottom = 320.0
rect_min_size = Vector2( 541, 320 )

[node name="DiegoBw" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Diego"]
position = Vector2( 262, 173 )
scale = Vector2( 0.352, 0.358 )
texture = ExtResource( 15 )

[node name="Diego" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Diego"]
position = Vector2( 262, 173 )
scale = Vector2( 0.352, 0.358 )
texture = ExtResource( 39 )

[node name="Container_Jupp" type="VBoxContainer" parent="ScrollContainer_Team3/VBoxContainer_Team3"]
margin_top = 324.0
margin_right = 541.0
margin_bottom = 644.0
rect_min_size = Vector2( 541, 320 )

[node name="JuppBw" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Jupp"]
position = Vector2( 267, 167 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 16 )

[node name="Jupp" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Jupp"]
position = Vector2( 267, 167 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 40 )

[node name="Container_Lydia" type="VBoxContainer" parent="ScrollContainer_Team3/VBoxContainer_Team3"]
margin_top = 648.0
margin_right = 541.0
margin_bottom = 968.0
rect_min_size = Vector2( 541, 320 )

[node name="LydiaBw" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Lydia"]
position = Vector2( 278, 170 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 17 )

[node name="Lydia" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Lydia"]
position = Vector2( 278, 170 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 37 )

[node name="Container_Thilo" type="VBoxContainer" parent="ScrollContainer_Team3/VBoxContainer_Team3"]
margin_top = 972.0
margin_right = 541.0
margin_bottom = 1292.0
rect_min_size = Vector2( 541, 320 )

[node name="ThiloBw" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Thilo"]
position = Vector2( 266, 172 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 18 )

[node name="Thilo" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Thilo"]
position = Vector2( 266, 172 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 38 )

[node name="Container_Thommy" type="VBoxContainer" parent="ScrollContainer_Team3/VBoxContainer_Team3"]
margin_top = 1296.0
margin_right = 541.0
margin_bottom = 1616.0
rect_min_size = Vector2( 541, 320 )

[node name="ThommyBw" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Thommy"]
position = Vector2( 266, 165 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 19 )

[node name="Thommy" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Thommy"]
position = Vector2( 266, 165 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 42 )

[node name="Container_Tilda" type="VBoxContainer" parent="ScrollContainer_Team3/VBoxContainer_Team3"]
margin_top = 1620.0
margin_right = 541.0
margin_bottom = 1940.0
rect_min_size = Vector2( 541, 320 )

[node name="TildaBw" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Tilda"]
position = Vector2( 269, 163 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 20 )

[node name="Tilda" type="Sprite" parent="ScrollContainer_Team3/VBoxContainer_Team3/Container_Tilda"]
position = Vector2( 269, 163 )
scale = Vector2( 0.352, 0.357 )
texture = ExtResource( 41 )

[node name="Button_Team1" type="Button" parent="."]
margin_left = 91.0
margin_top = 831.0
margin_right = 474.0
margin_bottom = 960.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
custom_styles/hover = SubResource( 23 )
custom_styles/normal = SubResource( 25 )
text = "Select Team 1"
script = ExtResource( 25 )

[node name="Button_Team2" type="Button" parent="."]
margin_left = 773.0
margin_top = 831.0
margin_right = 1156.0
margin_bottom = 960.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 29 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
text = "Select Team 2"
script = ExtResource( 26 )

[node name="Button_Team3" type="Button" parent="."]
margin_left = 1424.0
margin_top = 831.0
margin_right = 1807.0
margin_bottom = 960.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 31 )
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
text = "Select Team 3"
script = ExtResource( 27 )

[node name="Label" type="Label" parent="."]
margin_left = 589.0
margin_top = 5.0
margin_right = 1319.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "                                   Pick your team!
               Who is going to accompany your project?"

[node name="UserTeamConfirmation" type="PanelContainer" parent="."]
margin_left = 638.0
margin_top = 383.0
margin_right = 1303.0
margin_bottom = 550.0
custom_styles/panel = SubResource( 17 )
script = ExtResource( 13 )

[node name="Label" type="Label" parent="UserTeamConfirmation"]
margin_top = 60.0
margin_right = 665.0
margin_bottom = 106.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Are you sure?"
align = 1

[node name="confirm" type="Button" parent="UserTeamConfirmation/Label"]
margin_left = 65.0
margin_top = 111.0
margin_right = 289.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 18 )
text = "Yeah!"

[node name="decline" type="Button" parent="UserTeamConfirmation/Label"]
margin_left = 365.0
margin_top = 110.0
margin_right = 589.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 16 )
custom_styles/normal = SubResource( 19 )
text = "On second thought..."

[connection signal="mouse_entered" from="Button_Team1" to="Button_Team1" method="_on_Button_Team1_mouse_entered"]
[connection signal="mouse_exited" from="Button_Team1" to="Button_Team1" method="_on_Button_Team1_mouse_exited"]
[connection signal="pressed" from="Button_Team1" to="Button_Team1" method="_on_Button_Team1_pressed"]
[connection signal="sendTeamNumb" from="Button_Team1" to="." method="_on_Button_sendTeamNumb"]
[connection signal="mouse_entered" from="Button_Team2" to="Button_Team2" method="_on_Button_Team2_mouse_entered"]
[connection signal="mouse_exited" from="Button_Team2" to="Button_Team2" method="_on_Button_Team2_mouse_exited"]
[connection signal="pressed" from="Button_Team2" to="Button_Team2" method="_on_Button_Team2_pressed"]
[connection signal="sendTeamNumb" from="Button_Team2" to="." method="_on_Button_sendTeamNumb"]
[connection signal="mouse_entered" from="Button_Team3" to="Button_Team3" method="_on_Button_Team3_mouse_entered"]
[connection signal="mouse_exited" from="Button_Team3" to="Button_Team3" method="_on_Button_Team3_mouse_exited"]
[connection signal="pressed" from="Button_Team3" to="Button_Team3" method="_on_Button_Team3_pressed"]
[connection signal="sendTeamNumb" from="Button_Team3" to="." method="_on_Button_sendTeamNumb"]
[connection signal="pressed" from="UserTeamConfirmation/Label/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="UserTeamConfirmation/Label/decline" to="." method="_on_decline_pressed"]
